parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> <empty>
Rule 3     lista_sentencias -> lista_sentencias sentencia
Rule 4     sentencia -> declaracion_variable NEWLINE
Rule 5     sentencia -> asignacion NEWLINE
Rule 6     sentencia -> expresion NEWLINE
Rule 7     sentencia -> tipo_registro_decl NEWLINE
Rule 8     sentencia -> function_decl NEWLINE
Rule 9     sentencia -> if_stmt NEWLINE
Rule 10    sentencia -> while_stmt NEWLINE
Rule 11    sentencia -> return_stmt NEWLINE
Rule 12    sentencia -> NEWLINE
Rule 13    tipo_registro_decl -> TYPE ID DPNTO opt_newline LLE opt_newline bloque_propiedades opt_newline LLA
Rule 14    elem_registro -> ID PNTO ID
Rule 15    bloque_propiedades -> propiedad bloque_propiedades
Rule 16    bloque_propiedades -> propiedad
Rule 17    propiedad -> tipo lista_identificadores NEWLINE
Rule 18    lista_identificadores -> ID
Rule 19    lista_identificadores -> ID COMA lista_identificadores
Rule 20    declaracion_variable -> tipo lista_declaraciones
Rule 21    lista_declaraciones -> ID
Rule 22    lista_declaraciones -> ID EQ expresion
Rule 23    lista_declaraciones -> ID COMA lista_declaraciones
Rule 24    asignacion -> ID EQ expresion
Rule 25    asignacion -> ID EQ asignacion
Rule 26    asignacion -> elem_registro EQ expresion
Rule 27    asignacion -> elem_registro EQ asignacion
Rule 28    expresion -> expresion SUM expresion
Rule 29    expresion -> expresion RES expresion
Rule 30    expresion -> expresion MUL expresion
Rule 31    expresion -> expresion DIV expresion
Rule 32    expresion -> expresion AND expresion
Rule 33    expresion -> expresion OR expresion
Rule 34    expresion -> expresion I expresion
Rule 35    expresion -> expresion M expresion
Rule 36    expresion -> expresion m expresion
Rule 37    expresion -> expresion MI expresion
Rule 38    expresion -> expresion mI expresion
Rule 39    expresion -> RES expresion
Rule 40    expresion -> SUM expresion
Rule 41    expresion -> NOT expresion
Rule 42    expresion -> COS expresion
Rule 43    expresion -> SEN expresion
Rule 44    expresion -> LOG expresion
Rule 45    expresion -> EXP expresion
Rule 46    expresion -> PE expresion PA
Rule 47    expresion -> ENTERO
Rule 48    expresion -> REAL
Rule 49    expresion -> CARACTER
Rule 50    expresion -> TRUE
Rule 51    expresion -> FALSE
Rule 52    expresion -> ID
Rule 53    expresion -> ID PE lista_expresiones PA
Rule 54    lista_expresiones -> expresion
Rule 55    lista_expresiones -> expresion COMA lista_expresiones
Rule 56    lista_expresiones -> empty
Rule 57    expresion -> ID CE expresion CA
Rule 58    expresion -> ID PNTO LEN
Rule 59    if_stmt -> IF expresion DPNTO opt_newline LLE opt_newline lista_sentencias opt_newline LLA
Rule 60    if_stmt -> IF expresion DPNTO opt_newline LLE opt_newline lista_sentencias opt_newline LLA opt_newline ELSE opt_newline LLE opt_newline lista_sentencias opt_newline LLA
Rule 61    while_stmt -> WHILE expresion DPNTO opt_newline LLE opt_newline lista_sentencias opt_newline LLA
Rule 62    function_decl -> DEF tipo ID PE lista_param PA DPNTO LLE lista_sentencias return_stmt LLA
Rule 63    lista_param -> <empty>
Rule 64    lista_param -> param COMA lista_param
Rule 65    lista_param -> param
Rule 66    param -> tipo ID
Rule 67    return_stmt -> RETURN expresion NEWLINE
Rule 68    tipo -> tipo_base
Rule 69    tipo -> tipo_base CE ENTERO CA
Rule 70    tipo -> ID
Rule 71    tipo -> ID CE ENTERO CA
Rule 72    tipo_base -> INT
Rule 73    tipo_base -> FLOAT
Rule 74    tipo_base -> CHAR
Rule 75    tipo_base -> BOOL
Rule 76    empty -> <empty>
Rule 77    opt_newline -> <empty>
Rule 78    opt_newline -> NEWLINE opt_newline

Terminals, with rules where they appear

AND                  : 32
BOOL                 : 75
CA                   : 57 69 71
CARACTER             : 49
CE                   : 57 69 71
CHAR                 : 74
COMA                 : 19 23 55 64
COS                  : 42
DEF                  : 62
DIV                  : 31
DPNTO                : 13 59 60 61 62
ELSE                 : 60
ENTERO               : 47 69 71
EQ                   : 22 24 25 26 27
EXP                  : 45
FALSE                : 51
FLOAT                : 73
I                    : 34
ID                   : 13 14 14 18 19 21 22 23 24 25 52 53 57 58 62 66 70 71
IF                   : 59 60
INT                  : 72
LEN                  : 58
LLA                  : 13 59 60 60 61 62
LLE                  : 13 59 60 60 61 62
LOG                  : 44
M                    : 35
MI                   : 37
MUL                  : 30
NEWLINE              : 4 5 6 7 8 9 10 11 12 17 67 78
NOT                  : 41
OR                   : 33
PA                   : 46 53 62
PE                   : 46 53 62
PNTO                 : 14 58
REAL                 : 48
RES                  : 29 39
RETURN               : 67
SEN                  : 43
SUM                  : 28 40
TRUE                 : 50
TYPE                 : 13
WHILE                : 61
error                : 
m                    : 36
mI                   : 38

Nonterminals, with rules where they appear

asignacion           : 5 25 27
bloque_propiedades   : 13 15
declaracion_variable : 4
elem_registro        : 26 27
empty                : 56
expresion            : 6 22 24 26 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 41 42 43 44 45 46 54 55 57 59 60 61 67
function_decl        : 8
if_stmt              : 9
lista_declaraciones  : 20 23
lista_expresiones    : 53 55
lista_identificadores : 17 19
lista_param          : 62 64
lista_sentencias     : 1 3 59 60 60 61 62
opt_newline          : 13 13 13 59 59 59 60 60 60 60 60 60 60 61 61 61 78
param                : 64 65
programa             : 0
propiedad            : 15 16
return_stmt          : 11 62
sentencia            : 3
tipo                 : 17 20 62 66
tipo_base            : 68 69
tipo_registro_decl   : 7
while_stmt           : 10

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> .
    (3) lista_sentencias -> . lista_sentencias sentencia

    NEWLINE         reduce using rule 2 (lista_sentencias -> .)
    ID              reduce using rule 2 (lista_sentencias -> .)
    RES             reduce using rule 2 (lista_sentencias -> .)
    SUM             reduce using rule 2 (lista_sentencias -> .)
    NOT             reduce using rule 2 (lista_sentencias -> .)
    COS             reduce using rule 2 (lista_sentencias -> .)
    SEN             reduce using rule 2 (lista_sentencias -> .)
    LOG             reduce using rule 2 (lista_sentencias -> .)
    EXP             reduce using rule 2 (lista_sentencias -> .)
    PE              reduce using rule 2 (lista_sentencias -> .)
    ENTERO          reduce using rule 2 (lista_sentencias -> .)
    REAL            reduce using rule 2 (lista_sentencias -> .)
    CARACTER        reduce using rule 2 (lista_sentencias -> .)
    TRUE            reduce using rule 2 (lista_sentencias -> .)
    FALSE           reduce using rule 2 (lista_sentencias -> .)
    TYPE            reduce using rule 2 (lista_sentencias -> .)
    DEF             reduce using rule 2 (lista_sentencias -> .)
    IF              reduce using rule 2 (lista_sentencias -> .)
    WHILE           reduce using rule 2 (lista_sentencias -> .)
    RETURN          reduce using rule 2 (lista_sentencias -> .)
    INT             reduce using rule 2 (lista_sentencias -> .)
    FLOAT           reduce using rule 2 (lista_sentencias -> .)
    CHAR            reduce using rule 2 (lista_sentencias -> .)
    BOOL            reduce using rule 2 (lista_sentencias -> .)
    $end            reduce using rule 2 (lista_sentencias -> .)

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (3) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . declaracion_variable NEWLINE
    (5) sentencia -> . asignacion NEWLINE
    (6) sentencia -> . expresion NEWLINE
    (7) sentencia -> . tipo_registro_decl NEWLINE
    (8) sentencia -> . function_decl NEWLINE
    (9) sentencia -> . if_stmt NEWLINE
    (10) sentencia -> . while_stmt NEWLINE
    (11) sentencia -> . return_stmt NEWLINE
    (12) sentencia -> . NEWLINE
    (20) declaracion_variable -> . tipo lista_declaraciones
    (24) asignacion -> . ID EQ expresion
    (25) asignacion -> . ID EQ asignacion
    (26) asignacion -> . elem_registro EQ expresion
    (27) asignacion -> . elem_registro EQ asignacion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN
    (13) tipo_registro_decl -> . TYPE ID DPNTO opt_newline LLE opt_newline bloque_propiedades opt_newline LLA
    (62) function_decl -> . DEF tipo ID PE lista_param PA DPNTO LLE lista_sentencias return_stmt LLA
    (59) if_stmt -> . IF expresion DPNTO opt_newline LLE opt_newline lista_sentencias opt_newline LLA
    (60) if_stmt -> . IF expresion DPNTO opt_newline LLE opt_newline lista_sentencias opt_newline LLA opt_newline ELSE opt_newline LLE opt_newline lista_sentencias opt_newline LLA
    (61) while_stmt -> . WHILE expresion DPNTO opt_newline LLE opt_newline lista_sentencias opt_newline LLA
    (67) return_stmt -> . RETURN expresion NEWLINE
    (68) tipo -> . tipo_base
    (69) tipo -> . tipo_base CE ENTERO CA
    (70) tipo -> . ID
    (71) tipo -> . ID CE ENTERO CA
    (14) elem_registro -> . ID PNTO ID
    (72) tipo_base -> . INT
    (73) tipo_base -> . FLOAT
    (74) tipo_base -> . CHAR
    (75) tipo_base -> . BOOL

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    NEWLINE         shift and go to state 5
    ID              shift and go to state 14
    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    TYPE            shift and go to state 29
    DEF             shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    RETURN          shift and go to state 33
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    CHAR            shift and go to state 37
    BOOL            shift and go to state 38

    sentencia                      shift and go to state 3
    declaracion_variable           shift and go to state 4
    asignacion                     shift and go to state 6
    expresion                      shift and go to state 7
    tipo_registro_decl             shift and go to state 8
    function_decl                  shift and go to state 9
    if_stmt                        shift and go to state 10
    while_stmt                     shift and go to state 11
    return_stmt                    shift and go to state 12
    tipo                           shift and go to state 13
    elem_registro                  shift and go to state 15
    tipo_base                      shift and go to state 34

state 3

    (3) lista_sentencias -> lista_sentencias sentencia .

    NEWLINE         reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    ID              reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    RES             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    SUM             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    NOT             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    COS             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    SEN             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    LOG             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    EXP             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    PE              reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    ENTERO          reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    REAL            reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    CARACTER        reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    TRUE            reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    FALSE           reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    TYPE            reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    DEF             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    IF              reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    WHILE           reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    RETURN          reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    INT             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    FLOAT           reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    CHAR            reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    BOOL            reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)
    LLA             reduce using rule 3 (lista_sentencias -> lista_sentencias sentencia .)


state 4

    (4) sentencia -> declaracion_variable . NEWLINE

    NEWLINE         shift and go to state 39


state 5

    (12) sentencia -> NEWLINE .

    NEWLINE         reduce using rule 12 (sentencia -> NEWLINE .)
    ID              reduce using rule 12 (sentencia -> NEWLINE .)
    RES             reduce using rule 12 (sentencia -> NEWLINE .)
    SUM             reduce using rule 12 (sentencia -> NEWLINE .)
    NOT             reduce using rule 12 (sentencia -> NEWLINE .)
    COS             reduce using rule 12 (sentencia -> NEWLINE .)
    SEN             reduce using rule 12 (sentencia -> NEWLINE .)
    LOG             reduce using rule 12 (sentencia -> NEWLINE .)
    EXP             reduce using rule 12 (sentencia -> NEWLINE .)
    PE              reduce using rule 12 (sentencia -> NEWLINE .)
    ENTERO          reduce using rule 12 (sentencia -> NEWLINE .)
    REAL            reduce using rule 12 (sentencia -> NEWLINE .)
    CARACTER        reduce using rule 12 (sentencia -> NEWLINE .)
    TRUE            reduce using rule 12 (sentencia -> NEWLINE .)
    FALSE           reduce using rule 12 (sentencia -> NEWLINE .)
    TYPE            reduce using rule 12 (sentencia -> NEWLINE .)
    DEF             reduce using rule 12 (sentencia -> NEWLINE .)
    IF              reduce using rule 12 (sentencia -> NEWLINE .)
    WHILE           reduce using rule 12 (sentencia -> NEWLINE .)
    RETURN          reduce using rule 12 (sentencia -> NEWLINE .)
    INT             reduce using rule 12 (sentencia -> NEWLINE .)
    FLOAT           reduce using rule 12 (sentencia -> NEWLINE .)
    CHAR            reduce using rule 12 (sentencia -> NEWLINE .)
    BOOL            reduce using rule 12 (sentencia -> NEWLINE .)
    $end            reduce using rule 12 (sentencia -> NEWLINE .)


state 6

    (5) sentencia -> asignacion . NEWLINE

    NEWLINE         shift and go to state 40


state 7

    (6) sentencia -> expresion . NEWLINE
    (28) expresion -> expresion . SUM expresion
    (29) expresion -> expresion . RES expresion
    (30) expresion -> expresion . MUL expresion
    (31) expresion -> expresion . DIV expresion
    (32) expresion -> expresion . AND expresion
    (33) expresion -> expresion . OR expresion
    (34) expresion -> expresion . I expresion
    (35) expresion -> expresion . M expresion
    (36) expresion -> expresion . m expresion
    (37) expresion -> expresion . MI expresion
    (38) expresion -> expresion . mI expresion

    NEWLINE         shift and go to state 41
    SUM             shift and go to state 42
    RES             shift and go to state 43
    MUL             shift and go to state 44
    DIV             shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    I               shift and go to state 48
    M               shift and go to state 49
    m               shift and go to state 50
    MI              shift and go to state 51
    mI              shift and go to state 52


state 8

    (7) sentencia -> tipo_registro_decl . NEWLINE

    NEWLINE         shift and go to state 53


state 9

    (8) sentencia -> function_decl . NEWLINE

    NEWLINE         shift and go to state 54


state 10

    (9) sentencia -> if_stmt . NEWLINE

    NEWLINE         shift and go to state 55


state 11

    (10) sentencia -> while_stmt . NEWLINE

    NEWLINE         shift and go to state 56


state 12

    (11) sentencia -> return_stmt . NEWLINE

    NEWLINE         shift and go to state 57


state 13

    (20) declaracion_variable -> tipo . lista_declaraciones
    (21) lista_declaraciones -> . ID
    (22) lista_declaraciones -> . ID EQ expresion
    (23) lista_declaraciones -> . ID COMA lista_declaraciones

    ID              shift and go to state 59

    lista_declaraciones            shift and go to state 58

state 14

    (24) asignacion -> ID . EQ expresion
    (25) asignacion -> ID . EQ asignacion
    (52) expresion -> ID .
    (53) expresion -> ID . PE lista_expresiones PA
    (57) expresion -> ID . CE expresion CA
    (58) expresion -> ID . PNTO LEN
    (70) tipo -> ID .
    (71) tipo -> ID . CE ENTERO CA
    (14) elem_registro -> ID . PNTO ID

    EQ              shift and go to state 60
    NEWLINE         reduce using rule 52 (expresion -> ID .)
    SUM             reduce using rule 52 (expresion -> ID .)
    RES             reduce using rule 52 (expresion -> ID .)
    MUL             reduce using rule 52 (expresion -> ID .)
    DIV             reduce using rule 52 (expresion -> ID .)
    AND             reduce using rule 52 (expresion -> ID .)
    OR              reduce using rule 52 (expresion -> ID .)
    I               reduce using rule 52 (expresion -> ID .)
    M               reduce using rule 52 (expresion -> ID .)
    m               reduce using rule 52 (expresion -> ID .)
    MI              reduce using rule 52 (expresion -> ID .)
    mI              reduce using rule 52 (expresion -> ID .)
    PE              shift and go to state 61
    CE              shift and go to state 62
    PNTO            shift and go to state 63
    ID              reduce using rule 70 (tipo -> ID .)


state 15

    (26) asignacion -> elem_registro . EQ expresion
    (27) asignacion -> elem_registro . EQ asignacion

    EQ              shift and go to state 64


state 16

    (40) expresion -> SUM . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 65

state 17

    (39) expresion -> RES . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 67

state 18

    (41) expresion -> NOT . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 68

state 19

    (42) expresion -> COS . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 69

state 20

    (43) expresion -> SEN . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 70

state 21

    (44) expresion -> LOG . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 71

state 22

    (45) expresion -> EXP . expresion
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 72

state 23

    (46) expresion -> PE . expresion PA
    (28) expresion -> . expresion SUM expresion
    (29) expresion -> . expresion RES expresion
    (30) expresion -> . expresion MUL expresion
    (31) expresion -> . expresion DIV expresion
    (32) expresion -> . expresion AND expresion
    (33) expresion -> . expresion OR expresion
    (34) expresion -> . expresion I expresion
    (35) expresion -> . expresion M expresion
    (36) expresion -> . expresion m expresion
    (37) expresion -> . expresion MI expresion
    (38) expresion -> . expresion mI expresion
    (39) expresion -> . RES expresion
    (40) expresion -> . SUM expresion
    (41) expresion -> . NOT expresion
    (42) expresion -> . COS expresion
    (43) expresion -> . SEN expresion
    (44) expresion -> . LOG expresion
    (45) expresion -> . EXP expresion
    (46) expresion -> . PE expresion PA
    (47) expresion -> . ENTERO
    (48) expresion -> . REAL
    (49) expresion -> . CARACTER
    (50) expresion -> . TRUE
    (51) expresion -> . FALSE
    (52) expresion -> . ID
    (53) expresion -> . ID PE lista_expresiones PA
    (57) expresion -> . ID CE expresion CA
    (58) expresion -> . ID PNTO LEN

    RES             shift and go to state 17
    SUM             shift and go to state 16
    NOT             shift and go to state 18
    COS             shift and go to state 19
    SEN             shift and go to state 20
    LOG             shift and go to state 21
    EXP             shift and go to state 22
    PE              shift and go to state 23
    ENTERO          shift and go to state 24
    REAL            shift and go to state 25
    CARACTER        shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28
    ID              shift and go to state 66

    expresion                      shift and go to state 73

state 24

    (47) expresion -> ENTERO .
